// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Card/Card Header Playground 1`] = `
<div
  className="MuiCardHeader-root"
>
  <div
    className="MuiCardHeader-avatar"
  >
    <div
      className="MuiAvatar-root NatDsAvatar-root-346 MuiAvatar-circle"
    >
      <img
        alt="Nat Natura holding a cat"
        className="MuiAvatar-img"
        src="https://pbs.twimg.com/profile_images/1308179129267781632/wLDnEiOy_400x400.jpg"
      />
    </div>
  </div>
  <div
    className="MuiCardHeader-content"
  >
    <span
      className="MuiTypography-root MuiCardHeader-title MuiTypography-body2 MuiTypography-displayBlock"
    >
      Title text
    </span>
    <span
      className="MuiTypography-root MuiCardHeader-subheader MuiTypography-body2 MuiTypography-colorTextSecondary MuiTypography-displayBlock"
    >
      Subheader text
    </span>
  </div>
  <div
    className="MuiCardHeader-action"
  >
    <button
      aria-label="More"
      className="MuiButtonBase-root MuiIconButton-root"
      disabled={false}
      onBlur={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={0}
      type="button"
    >
      <span
        className="MuiIconButton-label"
      >
        <i
          aria-hidden={true}
          className="material-icons MuiIcon-root natds-icons natds-icons-filled-navigation-more NatDSIcon-root-348 NatDSIcon-root-349"
        >
          filled-navigation-more
        </i>
      </span>
    </button>
  </div>
</div>
`;

exports[`Storyshots Components/Card/Card Header With Custom Typography 1`] = `
<div
  className="MuiCardHeader-root"
>
  <div
    className="MuiCardHeader-avatar"
  >
    <div
      className="MuiAvatar-root NatDsAvatar-root-350 MuiAvatar-circle"
    >
      <img
        alt="Nat Natura holding a cat"
        className="MuiAvatar-img"
        src="https://pbs.twimg.com/profile_images/1308179129267781632/wLDnEiOy_400x400.jpg"
      />
    </div>
  </div>
  <div
    className="MuiCardHeader-content"
  >
    <p
      className="MuiTypography-root MuiTypography-body1"
    >
      Title text with body1 variant
    </p>
    <p
      className="MuiTypography-root MuiTypography-body2"
    >
      Subheader text with body2 variant
    </p>
  </div>
  <div
    className="MuiCardHeader-action"
  >
    <button
      aria-label="More"
      className="MuiButtonBase-root MuiIconButton-root"
      disabled={false}
      onBlur={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={0}
      type="button"
    >
      <span
        className="MuiIconButton-label"
      >
        <i
          aria-hidden={true}
          className="material-icons MuiIcon-root natds-icons natds-icons-filled-navigation-more NatDSIcon-root-352 NatDSIcon-root-353"
        >
          filled-navigation-more
        </i>
      </span>
      <span
        className="MuiTouchRipple-root"
      />
    </button>
  </div>
</div>
`;
